2012-04-17
 * PROTO_BINARY_KILLED, functional shared memory readout

2012-04-10
 * rts2-state supports -e option

2012-04-06
 * expand_wfn with expand path

2012-04-03
 * errorReported in Element, error propagation through script

2012-03-31
 * rts2-user can edit login files, not only database

2012-03-26
 * support for multi channel devices

2012-03-25
 * rts2-mon can send command(s) with --command option
 * use crypt for DB passwords

2012-03-24
 * replace /\ etc. in expanded variables with _, fix path problems with targets containting / in name

2012-03-09
 * removed FWHM extimates, HAM (should be handled by external scripts)
 * removed XPLATE, YPLATE (transation to WCS only metadata

2012-03-07
 * removed guding, HAM and star acquistions (should be replaced by I/O scripting)
 * MPEC name resolving

2012-03-02
 * login files for non-DB XML-RPCDs.

2012-02-11
 * finished new guide.py
 * S, waitidle script commands
 * --without-on-power for Zelio domes

2012-02-02
 * center calculations

2012-02-01
 * finalised include directory structure
 * added killall_wse command (without script end)
 * s in suffix for autosave values

2012-01-29
 * log system startup errors
 * added rts2script element to .rts2 templates

2012-01-18
 * SBIG filter support (E. Kundra)

2012-01-14
 * progresses
 * migrates objects to rts2core namespace

2012-01-13
 * --valuefile option
 * run_device in scripts
 * array values (double_array, double_array_add) from script code

2012-01-08
 * added records_integer value

2012-01-07
 * rts2-grbd's --create-disabled option

2012-01-06
 * added proper motion

2012-01-05
 * EVENT_WRITE_IMAGE_ONLY
 * write_headers executor command

2011-12-29
 * Rts2Conn->Connection,Rts2Command->Command,..

2011-12-26
 * expansion in templates

2011-12-22
 * version in manual pages is taken from autoconf

2011-12-16
 * multiple filter wheel support

2011-12-15
 * added runscript call
 * cleaned rts2script library (moved more classes to rts2script namespace)

2011-12-10